Updated indices, added some css, added wicked_pdf for pdf resumes

--- a/app/views/resume_data/new.html.erb
+++ b/app/views/resume_data/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Resume</h1>
+<div class="container">
+  <h1>New Resume</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', resume_data_path %>
+  <%= link_to 'Back', resume_data_path %>
+</div>
