Added custom tasks to deploy Passenger Standalone. Added styling to error messages. Added validation on summary in Resume. Added email confirmation for new user, Using AWS SES. Accepting only Xebia emails for sign up.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,11 @@ nav .brand-logo {
   width: 100%;
 }
 
+.error-messages {
+  @extend .red-text, .red, .lighten-5;
+  padding-left: 0.5em;
+}
+
 .resume-container {
   .row {
     margin-bottom: 0px;
