--- a/app/views/resumes/_form.html.erb
+++ b/app/views/resumes/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <%= form_for(@resume, html: { class: 'col s12' }) do |f| %>
     <% if @resume.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@resume.errors.count, "error") %> prohibited this resume from being saved:</h2>
+      <div id="error_explanation" class="error-messages">
+        <span><%= pluralize(@resume.errors.count, "error") %> prohibited this resume from being saved:</span>
 
         <ul>
         <% @resume.errors.full_messages.each do |message| %>
